--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -145,6 +145,99 @@
       transition: transform 0.3s, box-shadow 0.3s;
   }
 
+  .water-meter-card .card-image {
+      width: 100%;
+      height: 150px;
+      /* фиксированная высота */
+      overflow: hidden;
+      border-radius: 15px 15px 0 0;
+      /* скругление только сверху */
+      margin-bottom: 15px;
+  }
+
+  .water-meter-card .card-image img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      /* чтобы картинка красиво вписывалась */
+      display: block;
+  }
+
+  /* Существующая анимация списка */
+  .water-meter-card ul {
+      list-style-type: none;
+      /* убираем стандартные маркеры */
+      padding: 0;
+      margin-top: 15px;
+      font-weight: 500;
+      line-height: 1.6;
+      opacity: 0;
+      transform: translateY(20px);
+      animation: slideUpFade 1s forwards;
+      animation-delay: 0.3s;
+  }
+
+  @keyframes slideUpFade {
+      to {
+          opacity: 1;
+          transform: translateY(0);
+      }
+  }
+
+  .bath-install-card .card-image {
+      width: 100%;
+      height: 150px;
+      overflow: hidden;
+      border-radius: 15px 15px 0 0;
+      margin-bottom: 15px;
+  }
+
+  .bath-install-card .card-image img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      display: block;
+  }
+
+  .bath-install-card ul {
+      list-style-type: none;
+      padding: 0;
+      margin-top: 15px;
+      font-weight: 500;
+      line-height: 1.6;
+      opacity: 0;
+      transform: translateY(20px);
+      animation: slideUpFade 1s forwards;
+      animation-delay: 0.3s;
+  }
+
+  .toilet-install-card .card-image {
+      width: 100%;
+      height: 150px;
+      overflow: hidden;
+      border-radius: 15px 15px 0 0;
+      margin-bottom: 15px;
+  }
+
+  .toilet-install-card .card-image img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      display: block;
+  }
+
+  .toilet-install-card ul {
+      list-style-type: none;
+      padding: 0;
+      margin-top: 15px;
+      font-weight: 500;
+      line-height: 1.6;
+      opacity: 0;
+      transform: translateY(20px);
+      animation: slideUpFade 1s forwards;
+      animation-delay: 0.3s;
+  }
+
   .card:hover {
       transform: translateY(-5px);
       box-shadow: 0 8px 20px rgba(0, 0, 0, 0.2);
