--- a/style.css
+++ b/style.css
@@ -1,5 +1,41 @@
-/* Подключение шрифтов Google Fonts */
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@600;700&family=Roboto:wght@400;500&display=swap');
+/* --------------------------
+   Локальное подключение шрифтов
+   Положите файлы в ./fonts/
+   Имена файлов: Montserrat-600.woff2, Montserrat-700.woff2,
+                 Roboto-400.woff2, Roboto-500.woff2
+   -------------------------- */
+
+@font-face {
+  font-family: 'Montserrat';
+  font-style: normal;
+  font-weight: 600;
+  font-display: swap;
+  src: url('./fonts/Montserrat-600.woff2') format('woff2');
+}
+
+@font-face {
+  font-family: 'Montserrat';
+  font-style: normal;
+  font-weight: 700;
+  font-display: swap;
+  src: url('./fonts/Montserrat-700.woff2') format('woff2');
+}
+
+@font-face {
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 400;
+  font-display: swap;
+  src: url('./fonts/Roboto-400.woff2') format('woff2');
+}
+
+@font-face {
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 500;
+  font-display: swap;
+  src: url('./fonts/Roboto-500.woff2') format('woff2');
+}
 
 /* Цвета / переменные */
 :root{
