--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
   font-style: normal;
   font-weight: 600;
   font-display: swap;
-  src: url('./fonts/Montserrat-600.woff2') format('woff2');
+  src: url('./assets/fonts/Montserrat-600.woff2') format('woff2');
 }
 
 @font-face {
@@ -18,7 +18,7 @@
   font-style: normal;
   font-weight: 700;
   font-display: swap;
-  src: url('./fonts/Montserrat-700.woff2') format('woff2');
+  src: url('./assets/fonts/Montserrat-700.woff2') format('woff2');
 }
 
 @font-face {
@@ -26,7 +26,7 @@
   font-style: normal;
   font-weight: 400;
   font-display: swap;
-  src: url('./fonts/Roboto-400.woff2') format('woff2');
+  src: url('./assets/fonts/Roboto-400.woff2') format('woff2');
 }
 
 @font-face {
@@ -34,7 +34,7 @@
   font-style: normal;
   font-weight: 500;
   font-display: swap;
-  src: url('./fonts/Roboto-500.woff2') format('woff2');
+  src: url('./assets/fonts/Roboto-500.woff2') format('woff2');
 }
 
 /* Цвета / переменные */
